--- a/DioKftSite/Views/Home/Admin.cshtml
+++ b/DioKftSite/Views/Home/Admin.cshtml
@@ -12,6 +12,7 @@
             <li>@Html.ActionLink(Resources.Resources.NewsCategories, "Index", "NewsCategories")</li>
             <li>@Html.ActionLink(Resources.Resources.News, "Index", "News")</li>
             <li>@Html.ActionLink(Resources.Resources.Users, "Index", "Users")</li>
+            <li>@Html.ActionLink(Resources.Resources.EmailSettings, "Index", "WebSiteConfigurations")</li>
         </ul>
     </div>
 </div>
